Bug 560441. Quiet some lazy frame construction asserts because framesets don't play the XBL game. r=bzbarsky