layout/base/nsCSSFrameConstructor.cpp
@@ -6217,14 +6217,21 @@ nsCSSFrameConstructor::MaybeConstructLazily(Operation aOperation,
   nsIContent* content = aContainer;
   while (content &&
          !content->HasFlag(NODE_DESCENDANTS_NEED_FRAMES)) {
-    NS_ASSERTION(content->GetPrimaryFrame() &&
-                 (!content->HasFlag(NODE_NEEDS_FRAME) ||
-                  content->GetPrimaryFrame()->GetContent() != content),
+    NS_ASSERTION(content->GetPrimaryFrame() ||
+      (content->GetFlattenedTreeParent() &&
+       content->GetFlattenedTreeParent()->GetPrimaryFrame() &&
+       content->GetFlattenedTreeParent()->GetPrimaryFrame()->IsLeaf()),
+      // The clumsy leaf frame check is for leaf frames that process their own
+      // children and may ignore anonymous children (eg framesets).
+      "Ancestors of nodes with frames to be constructed lazily should have "
+      "frames");
+    NS_ASSERTION(!content->HasFlag(NODE_NEEDS_FRAME) ||
+                 content->GetPrimaryFrame()->GetContent() != content,
                  //XXX the content->GetPrimaryFrame()->GetContent() != content
                  // check is needed due to bug 135040. Remove it once that's
                  // fixed.
                  "Ancestors of nodes with frames to be constructed lazily "
-                 "should have frames and not have NEEDS_FRAME bit set");
+                 "should not have NEEDS_FRAME bit set");
     content->SetFlags(NODE_DESCENDANTS_NEED_FRAMES);
     content = content->GetFlattenedTreeParent();
   }
